fix(plugins/plugin-client-common): in patternfly-based components, the CurrentContext widget has poor alignment
Fixes #6494

--- a/plugins/plugin-client-common/web/scss/components/DropDown/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/DropDown/PatternFly.scss
@@ -23,6 +23,7 @@
   .pf-c-dropdown__toggle.pf-m-plain,
   .pf-c-dropdown__toggle-text {
     color: var(--color-text-01);
+    display: flex;
   }
   .pf-c-dropdown__menu {
     background-color: var(--color-base05);
